enter bug fixed. added timer. added endgame and jump to index.
timer is affected by typing accuracy and how many words are completed

--- a/style.css
+++ b/style.css
@@ -30,6 +30,12 @@ main {
 
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
-    
+
     width: 100%;
+}
+input[type="button"] {
+    z-index: 1;
+}
+canvas {
+    z-index: 0;
 }
